// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityCard component should not render data stream security selector for the record if no datastreams found 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Work
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_security_policy"
            title="Inherited security policy details"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              }
            }
            disabled={false}
            label="Override inherited security (detailed below)"
            name="securitySection.rek_security_inherited"
            normalize={[Function]}
            overrideSecurityId="rek-security-inherited"
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`SecurityCard component should render security card correctly for collection with data stream selector for collection 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Collection
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={true}
            fieldName="securitySection.rek_security_policy"
            recordType="collection"
            securityPolicy={5}
            securitySelectorId="rek-security-policy"
            text={
              Object {
                "cardTitle": [Function],
                "dataStreamFieldLabel": <span>
                  Override datastream level policy to apply to the 
                  <b>
                    datastream
                  </b>
                   of this PID
                </span>,
                "dataStreamSelectedTitle": <span>
                  Current collection 
                  <b>
                    datastream
                  </b>
                   level security policy details
                </span>,
                "description": "",
                "fieldLabel": "Override collection level policy to apply to this PID",
                "prompt": "Select a security policy to apply",
                "selectedTitle": "Current collection level security policy details",
              }
            }
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={true}
            fieldName="securitySection.rek_datastream_policy"
            recordType="collection"
            securityPolicy={5}
            securitySelectorId="rek-datastream-policy"
            text={
              Object {
                "fieldLabel": <span>
                  Override datastream level policy to apply to the 
                  <b>
                    datastream
                  </b>
                   of this PID
                </span>,
                "prompt": "Select a security policy to apply",
                "selectedTitle": <span>
                  Current collection 
                  <b>
                    datastream
                  </b>
                   level security policy details
                </span>,
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`SecurityCard component should render security card correctly for community 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Community
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={false}
            fieldName="securitySection.rek_security_policy"
            recordType="community"
            securityPolicy={5}
            securitySelectorId="rek-security-policy"
            text={
              Object {
                "cardTitle": [Function],
                "description": "",
                "fieldLabel": "Override community level policy to apply to this PID",
                "prompt": "Select a security policy to apply",
                "selectedTitle": "Selected community record security policy details",
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`SecurityCard component should render security card correctly for record type 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Work
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_security_policy"
            title="Inherited security policy details"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              }
            }
            disabled={false}
            label="Override inherited security (detailed below)"
            name="securitySection.rek_security_inherited"
            normalize={[Function]}
            overrideSecurityId="rek-security-inherited"
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="datastream-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Datastream
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_datastream_policy"
            title="Inherited datastream security policy details"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Field
            attachedDataStreams={
              Array [
                Object {
                  "dsi_dsid": "test1.txt",
                  "dsi_security_policy": 1,
                },
              ]
            }
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": [Function],
                "type": [Function],
              }
            }
            disabled={false}
            key="1"
            name="securitySection.dataStreams"
            text={
              Object {
                "cardTitle": [Function],
                "noDataStreams": "No datastreams to display",
                "overridePolicyPrompt": "Security policy for this file to override inheritance",
                "overridePrompt": "Override datastream security policy details",
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`SecurityCard component should render security card correctly for record type if user checks override security 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Work
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_security_policy"
            title="Inherited security policy details"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              }
            }
            disabled={false}
            label="Override inherited security (detailed below)"
            name="securitySection.rek_security_inherited"
            normalize={[Function]}
            overrideSecurityId="rek-security-inherited"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={false}
            fieldName="securitySection.rek_security_policy"
            recordType="record"
            securityPolicy={5}
            securitySelectorId="rek-security-policy"
            text={
              Object {
                "cardTitle": [Function],
                "dataStream": Object {
                  "cardTitle": [Function],
                  "noDataStreams": "No datastreams to display",
                  "overridePolicyPrompt": "Security policy for this file to override inheritance",
                  "overridePrompt": "Override datastream security policy details",
                },
                "dataStreamFieldLabel": "Override work level policy to apply to this PID",
                "dataStreamSelectedTitle": "Selected work level datastream security policy details",
                "description": "",
                "fieldLabel": "Override work",
                "inheritedPolicy": Object {
                  "dataStream": Object {
                    "title": "Inherited datastream security policy details",
                  },
                  "record": Object {
                    "title": "Inherited security policy details",
                  },
                },
                "prompt": "Select a security policy to apply",
                "selectedTitle": "Selected work level security policy details",
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="datastream-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Datastream
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_datastream_policy"
            title="Inherited datastream security policy details"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Field
            attachedDataStreams={
              Array [
                Object {
                  "dsi_dsid": "test2.txt",
                  "dsi_security_policy": 1,
                },
              ]
            }
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": [Function],
                "type": [Function],
              }
            }
            disabled={false}
            key="1"
            name="securitySection.dataStreams"
            text={
              Object {
                "cardTitle": [Function],
                "noDataStreams": "No datastreams to display",
                "overridePolicyPrompt": "Security policy for this file to override inheritance",
                "overridePrompt": "Override datastream security policy details",
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`SecurityCard component should render security card with disabled inputs 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={2}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="record-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Work
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={2}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_security_policy"
            title="Inherited security policy details"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": null,
                "type": [Function],
              }
            }
            disabled={true}
            label="Override inherited security (detailed below)"
            name="securitySection.rek_security_inherited"
            normalize={[Function]}
            overrideSecurityId="rek-security-inherited"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(SecuritySelector)
            disabled={true}
            fieldName="securitySection.rek_security_policy"
            recordType="record"
            securityPolicy={5}
            securitySelectorId="rek-security-policy"
            text={
              Object {
                "cardTitle": [Function],
                "dataStream": Object {
                  "cardTitle": [Function],
                  "noDataStreams": "No datastreams to display",
                  "overridePolicyPrompt": "Security policy for this file to override inheritance",
                  "overridePrompt": "Override datastream security policy details",
                },
                "dataStreamFieldLabel": "Override work level policy to apply to this PID",
                "dataStreamSelectedTitle": "Selected work level datastream security policy details",
                "description": "",
                "fieldLabel": "Override work",
                "inheritedPolicy": Object {
                  "dataStream": Object {
                    "title": "Inherited datastream security policy details",
                  },
                  "record": Object {
                    "title": "Inherited security policy details",
                  },
                },
                "prompt": "Select a security policy to apply",
                "selectedTitle": "Selected work level security policy details",
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      accentHeader={true}
      standardCardId="datastream-security-card"
      subCard={true}
      title={
        <span>
          <strong>
            Datastream
          </strong>
           level security - 
          UQ:123456
        </span>
      }
    >
      <ForwardRef(Grid)
        container={true}
        padding={0}
        spacing={1}
      >
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Memo(InheritedSecurityDetails)
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            parentKey="rek_datastream_policy"
            title="Inherited datastream security policy details"
          />
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          xs={12}
        >
          <Field
            attachedDataStreams={
              Array [
                Object {
                  "dsi_dsid": "test3.txt",
                  "dsi_security_policy": 1,
                },
              ]
            }
            collections={
              Array [
                Object {
                  "parent": Object {
                    "rek_datastream_policy": 1,
                    "rek_security_policy": 2,
                  },
                  "rek_ismemberof": "Test collection",
                },
              ]
            }
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "compare": [Function],
                "type": [Function],
              }
            }
            disabled={true}
            key="1"
            name="securitySection.dataStreams"
            text={
              Object {
                "cardTitle": [Function],
                "noDataStreams": "No datastreams to display",
                "overridePolicyPrompt": "Security policy for this file to override inheritance",
                "overridePrompt": "Override datastream security policy details",
              }
            }
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
